--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,19 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  padding-top: 80px; /* For fixed navbar */
-}
-
-.navbar-brand img {
-  mix-blend-mode: multiply;
+  padding-top: 80px;
+  /* For fixed navbar */
 }
 
 .product-card {
   transition: transform 0.3s;
 }
-.abc{
-  background-color: #849caf;
+
+.abc {
+  background-color: #010101e4;
+}
+
+.nav-link {
+  color: #ffffff;
 }
 
 #featuredCarousel {
@@ -23,13 +25,13 @@ body {
 .carousel-control-prev,
 .carousel-control-next {
   color: blue;
-  font-size: 30px; 
+  font-size: 30px;
 }
 
 .carousel-control-prev-icon,
 .carousel-control-next-icon {
   background-color: blue;
-  border-radius: 50%; 
+  border-radius: 50%;
   padding: 10px;
 }
 
@@ -56,7 +58,7 @@ body {
 }
 
 footer {
-  background-color: #2c3e50;
+  background-color: #007bf5;
 }
 
 footer a {
